    - Added MK2 selenium battery equipment.
    - Added the hydroelectric plant, which is unlocked in orange science and generates 330kW, forever. It requires to be partially submerged to function.
    - Added the geothermal plant, which is unlocked in yellow science and requires a special fluid and fuel to function.
    - Added new graphics for the welder!

  Changes:
    - Changed vanilla rocket fuel into Solid rocket fuel.
    - Changed rocket fuel's acceleration modifier to 250%.
    - Changed rocket fuel's top speed modifier to 500%.
    - Changed rocket fuels fuel value to 25MJ.
    - Changed ruby/sapphire laser heads into modules for the electronic laser etcher.
    - Removed Jesus Marie, they're minerals! achievement.
    - Changed rocket fuels recipe to match what it actually should be.
    - Changed rocket fuel to have a stack size of 100.
    - Moved rocket control units into their correct subgroup.
    - Seperated circuit recipes into circuits (green, orange, red) and processing units (blue, purple, grey).
    - Changed "There is no spoon" and "No time for chitchat" to be actually doable in PM, and let them be doable by changing world settings
    - Changed tier 4 module recipes to take red and blue circuits instead of orange and blue.
    - Increased the power demand of the rocket silo from 4MW to 8MW.
    - Increased the amount of modules slots in a rocket silo from 4 to 5.
    - Updated all plastic icons to look more vanilla, and more better.
    - Also updated all plastic technology icons.
    - Updated almost all of the technology icons to now have shadows.

---------------------------------------------------------------------------------------------------
Version: 0.7.003
Date: 2025-28-10
  The out of sight, out of mind Update:

  Additions:
    - Added a tooltip on fluids that can be voided via the burn-inator.

  Fixes:
    - Fixed every crystallizer recipe not considering productivity, if it outputs hot coolant.