@@ -1733,29 +1733,38 @@ data:extend({
       {
         production_type = "input",
         pipe_covers = pipecoverspictures(),
-        volume = 1500,
+        volume = 200,
         pipe_connections = {{ flow_direction="input", direction = defines.direction.south--[[@as int]], position = {0, 2} }},
       },
       {
-
         production_type = "output",
         pipe_covers = pipecoverspictures(),
-        volume = 1500,
+        volume = 100,
         pipe_connections = {{ flow_direction="output", direction = defines.direction.north--[[@as int]], position = {0, -2} }},
       },
       {
-
         production_type = "output",
         pipe_covers = pipecoverspictures(),
-        volume = 1500,
-        pipe_connections = {{ flow_direction="output", direction = defines.direction.west--[[@as int]], position = {-2, 0} }},
+        volume = 100,
+        pipe_connections = {{ flow_direction="output", direction = defines.direction.west--[[@as int]], position = {-2, 1} }},
       },
       {
-
         production_type = "output",
         pipe_covers = pipecoverspictures(),
-        volume = 1500,
-        pipe_connections = {{ flow_direction="output", direction = defines.direction.east--[[@as int]], position = {2, 0} }},
+        volume = 100,
+        pipe_connections = {{ flow_direction="output", direction = defines.direction.west--[[@as int]], position = {-2, -1} }},
+      },
+      {
+        production_type = "output",
+        pipe_covers = pipecoverspictures(),
+        volume = 100,
+        pipe_connections = {{ flow_direction="output", direction = defines.direction.east--[[@as int]], position = {2, 1} }},
+      },
+      {
+        production_type = "output",
+        pipe_covers = pipecoverspictures(),
+        volume = 100,
+        pipe_connections = {{ flow_direction="output", direction = defines.direction.east--[[@as int]], position = {2, -1} }},
       },
     },
   }--[[@as data.AssemblingMachinePrototype]],
