@@ -17,6 +17,7 @@ Date: 2025-28-09
     - Added the hydroelectric plant, which is unlocked in orange science and generates 330kW, forever. It requires to be partially submerged to function.
     - Added the geothermal plant, which is unlocked in yellow science and requires a special fluid and fuel to function.
     - Added new graphics for the welder!
+    - Remodelled the atmospheric condenser!
 
   Changes:
     - Changed vanilla rocket fuel into Solid rocket fuel.
@@ -36,6 +37,7 @@ Date: 2025-28-09
     - Updated all plastic icons to look more vanilla, and more better.
     - Also updated all plastic technology icons.
     - Updated almost all of the technology icons to now have shadows.
+    - Changed the atmospheric condenser to have more output fluidboxes, to match its new model.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.7.003
